[gd_scene load_steps=8 format=3 uid="uid://gdj1v7g6crvq"]

[ext_resource type="Script" path="res://test_scene.gd" id="1_dcr3e"]
[ext_resource type="Script" path="res://fullscreen_shader.gd" id="2_0ojgl"]
[ext_resource type="Script" path="res://inventory/scripts/grid_base.gd" id="2_e0bwv"]
[ext_resource type="Texture2D" uid="uid://n7rcfk6jojsp" path="res://assets/UI/Inventory/gird_cell.png" id="2_qt5eq"]
[ext_resource type="Shader" path="res://film_grain.gdshader" id="3_jskts"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_j3ckx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1f71u"]
shader = ExtResource("3_jskts")
shader_parameter/grain_amount = 0.42
shader_parameter/grain_size = 0.1
shader_parameter/uv_scaling = 0.9
shader_parameter/wave_strength = 0.2
shader_parameter/NOISE_TEXTURE = SubResource("NoiseTexture2D_j3ckx")

[node name="Test_scene" type="Control" node_paths=PackedStringArray("Grid_node")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dcr3e")
Grid_node = NodePath("Inventory")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
script = ExtResource("2_0ojgl")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_1f71u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(0.439849, 0.285744, 0.744283, 0.462745)

[node name="Inventory3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 12.0
offset_right = 52.0
offset_bottom = 40.0
texture = ExtResource("2_qt5eq")
script = ExtResource("2_e0bwv")
grid_height = 5
grid_width = 5

[node name="Inventory" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 318.0
offset_right = 149.0
offset_bottom = 358.0
texture = ExtResource("2_qt5eq")
script = ExtResource("2_e0bwv")
grid_height = 10
grid_width = 10

[node name="Inventory2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.01
offset_left = 260.0
offset_right = 292.0
offset_bottom = 40.0
texture = ExtResource("2_qt5eq")
script = ExtResource("2_e0bwv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="debug pannel" type="Panel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 488.0
grow_horizontal = 0

[node name="Label" type="Label" parent="CanvasLayer/debug pannel"]
layout_mode = 0
offset_left = 73.0
offset_top = 7.0
offset_right = 127.0
offset_bottom = 30.0
text = "Grid"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/debug pannel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_right = -5.0
offset_bottom = 566.0
grow_horizontal = 2
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/debug pannel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="width" type="LineEdit" parent="CanvasLayer/debug pannel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
placeholder_text = "Width"

[node name="height" type="LineEdit" parent="CanvasLayer/debug pannel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
placeholder_text = "Height"

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/debug pannel/VBoxContainer"]
layout_mode = 2

[node name="quantity" type="LineEdit" parent="CanvasLayer/debug pannel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Quantity"

[node name="DebugButton" type="Button" parent="CanvasLayer/debug pannel/VBoxContainer"]
layout_mode = 2
text = "Add item"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/debug pannel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/debug pannel/VBoxContainer"]
layout_mode = 2
text = "Change size"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/debug pannel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Gwidth" type="LineEdit" parent="CanvasLayer/debug pannel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
placeholder_text = "Grid width"

[node name="Gheight" type="LineEdit" parent="CanvasLayer/debug pannel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "Grid Height"

[node name="change grid size" type="Button" parent="CanvasLayer/debug pannel/VBoxContainer"]
layout_mode = 2
text = "Change Grid size"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/debug pannel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/debug pannel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="save_btn" type="Button" parent="CanvasLayer/debug pannel/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Save"

[node name="load_btn" type="Button" parent="CanvasLayer/debug pannel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Load"

[node name="view_btn" type="Button" parent="CanvasLayer/debug pannel/VBoxContainer/HBoxContainer3"]
visible = false
layout_mode = 2
text = "View items"

[node name="PrintLabel" type="Label" parent="CanvasLayer/debug pannel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Testing"
autowrap_mode = 3
text_overrun_behavior = 3
max_lines_visible = 2

[connection signal="pressed" from="CanvasLayer/debug pannel/VBoxContainer/DebugButton" to="." method="_on_debug_button_pressed"]
[connection signal="pressed" from="CanvasLayer/debug pannel/VBoxContainer/change grid size" to="." method="_on_change_grid_size_pressed"]
[connection signal="pressed" from="CanvasLayer/debug pannel/VBoxContainer/HBoxContainer3/save_btn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/debug pannel/VBoxContainer/HBoxContainer3/load_btn" to="." method="_on_load_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/debug pannel/VBoxContainer/HBoxContainer3/view_btn" to="." method="_on_view_btn_pressed"]
